<resources>
    <string name="app_name">ButtonJournal</string>
    <string name="add_event_button_description">Add New Event</string>
    <string name="view_timeline_button_text">View</string>
    <string name="event_triggered_button_placeholder">Event</string>
    <string name="add_event_type_create">Create</string>
    <string name="event_name">Event Name</string>
    <string name="placeholder">placeholder</string>
    <string name="label_count">Count</string>
    <string name="label_average">Average</string>
    <string name="label_day">Day</string>
    <string name="label_week">Week</string>
    <string name="label_month">Month</string>
    <string name="title_event_log">Event Log</string>
    <string name="cdesc_delete_event">Delete Event</string>
    <string name="cdesc_add_event">Add Event of this Type</string>
    <string name="label_year">Year</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="title_select_date">Select Date</string>
    <string name="pick">Pick</string>
    <string name="title_new_event">New Event: \"%1s\"</string>
    <string name="label_total">Total</string>
    <string name="delete_event_types">Delete Event Types</string>
    <string name="done">Done</string>
    <string name="delete_events">Delete Events</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_type_title">Delete %1s?</string>
    <string name="confirm_delete_type_text">"Event Type and all Event Instances will be deleted."</string>
    <string name="rename">Rename</string>
    <string name="rename_type">Rename %1s</string>
</resources>