<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEventActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_count" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_average" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_day" />

            <TextView
                android:id="@+id/tv_day_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/tv_day_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_week" />

            <TextView
                android:id="@+id/tv_week_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/tv_week_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_month" />

            <TextView
                android:id="@+id/tv_month_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/tv_month_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_year" />

            <TextView
                android:id="@+id/tv_year_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />

            <TextView
                android:id="@+id/tv_year_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </TableRow>
    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_event_log"
        tools:listitem="@layout/event_view" />

    <TextView
        android:id="@+id/title_event_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_event_log"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/event_view_add_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/cdesc_add_event"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>